2006-04-14  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/rpcndr.h (boolean): Add typedef.
	Thanks to:    James du Russel <ephelon at users dot sf dot net>
	* include/rpcndr.h (_RPCNDR_H): Define.
	Define in addition to __RPCNDR_H__, this is the w32api standard.

2006-04-14  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.7.
	* Makefile.in: Ditto.

2006-04-13  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (GET_MODULE_HANDLE_EX_FLAG_*): Define.
	Thanks to:    Brandon Sneed <brandon at redf dot net>

2006-04-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/secext.h: Enclose function declarations in extern "C"
	if __cplusplus.

2006-04-11  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/comcat.h: INTERFACE should not remain defined
	at the end of the header.
	* include/docobj.h: Ditto.
	* include/exdisp.h: Ditto.
	* include/intshcut.h: Ditto.
	* include/mlang.h: Ditto.
	* include/mshtml.h: Ditto.
	* include/oaidl.h: Ditto.
	* include/objidl.h: Ditto.
	* include/objsafe.h: Ditto.
	* include/ocidl.h: Ditto.
	* include/oleacc.h: Ditto.
	* include/oledlg.h: Ditto.
	* include/oleidl.h: Ditto.
	* include/richole.h: Ditto.
	* include/shldisp.h: Ditto.
	* include/shlobj.h: Ditto.
	* include/unknwn.h: Ditto.
	* include/vfw.h: Ditto.
	Thanks to:    Brandon Sneed <brandon at redf dot net>

2006-04-11  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/commdlg.h (PD_*): Define.
	Thanks to:    Wolfgang Glas <softadm at users dot sf dot net>

2006-04-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/iphlpapi.h (GetAdaptersAddresses): Check for winsock2
	here also.

2006-04-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wincrypt.h (PROV_MS_EXCHANGE): Define.
	We should probably remove PROV_MS_MAIL but I'm keeping it for
	now for compatibility reasons.
	Thanks to:    Marcus Agehall <agehall at users dot sf dot net>
